--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -17,7 +17,7 @@ jobs:
       group: padel-watcher
       cancel-in-progress: true
 
-    # Run inside the Playwright image (browsers & OS deps preinstalled)
+    # >>> Run inside Playwright image to avoid apt/deps installs <<<
     container:
       image: mcr.microsoft.com/playwright/python:v1.47.0-jammy
 
@@ -27,14 +27,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      # 2) Mark repo safe for git inside container + set identity
-      - name: Configure git (safe dir & identity)
-        run: |
-          git config --global --add safe.directory "$GITHUB_WORKSPACE"
-          git config --global user.name "padel-bot"
-          git config --global user.email "padel-bot@users.noreply.github.com"
-
-      # 3) Ensure padel-state branch exists (bootstrap if missing)
+      # 2) Ensure padel-state branch exists (bootstrap if missing)
       - name: Ensure padel-state branch exists
         run: |
           git fetch origin --quiet || true
@@ -44,6 +37,8 @@ jobs:
             git reset --hard
             mkdir -p state
             echo "Padel state branch" > .padel-state-readme
+            git config user.name "padel-bot"
+            git config user.email "padel-bot@users.noreply.github.com"
             git add .
             git commit -m "init padel-state"
             git push origin padel-state
@@ -52,7 +47,7 @@ jobs:
             echo "padel-state exists on remote."
           fi
 
-      # 4) Pull state branch into a side folder and restore state
+      # 3) Pull state branch into a side folder and restore state
       - uses: actions/checkout@v4
         with:
           ref: padel-state
@@ -69,14 +64,15 @@ jobs:
           fi
           ls -la state || true
 
-      # 5) Python deps (Playwright + requests) — no browser install needed
+      # 4) Python deps only (container already has browsers & OS deps)
       - name: Install Python deps
         run: |
-          python3 --version
-          python3 -m pip install --upgrade pip
-          python3 -m pip install "playwright==1.47.0" requests
+          python --version
+          pip install --upgrade pip
+          pip install playwright==1.47.0 requests
+          # DO NOT run "playwright install --with-deps" inside the container
 
-      # 6) Run the checker
+      # 5) Run the checker
       - name: Run checker
         env:
           TG_TOKEN:   ${{ secrets.TG_TOKEN }}
@@ -103,13 +99,15 @@ jobs:
           path: debug/*.png
           if-no-files-found: ignore
 
-      # 7) Persist state back to padel-state
+      # 6) Persist state back to padel-state
       - name: Persist state to branch
         if: always()
         run: |
           mkdir -p .state_branch/state
           cp -f state/* .state_branch/state/ 2>/dev/null || true
           cd .state_branch
+          git config user.name "padel-bot"
+          git config user.email "padel-bot@users.noreply.github.com"
           git add state/* || true
           git commit -m "update state [skip ci]" || true
           git push origin HEAD:padel-state || true
@@ -123,10 +121,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Touch keepalive file and push
         run: |
-          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+          date +%F > .keepalive
           git config user.name "padel-bot"
           git config user.email "padel-bot@users.noreply.github.com"
-          date +%F > .keepalive
           git add .keepalive || true
           git commit -m "keepalive [skip ci]" || true
           git push || true
